fix: overflow-y-auto on aside

--- a/resources/scss/admin/partials/_table.scss
+++ b/resources/scss/admin/partials/_table.scss
@@ -1,4 +1,5 @@
 table{
+  min-height: 100px;
   max-height: 70%;
   overflow-y: auto;
   tr{
